--- a/proyecto/nbproject/project.properties
+++ b/proyecto/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=tarea1_2-2020
-main.class=App.Main
+main.class=Interfaz.Venta
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
