--- a/proyecto/nbproject/private/private.properties
+++ b/proyecto/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Daniel\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=/home/daniel/snap/netbeans/common/data/12.0/build.properties
